Fixed playlist container height, search spacing

--- a/src/css/keyboardAndPlaylist.css
+++ b/src/css/keyboardAndPlaylist.css
@@ -88,7 +88,7 @@ root {
 }
 
 .playlist-songs-container {
-	height: calc(100% - 106px);
+	height: calc(100% - 93px);
 }
 
 .playlistBox {
